@@ -4,13 +4,10 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 
-import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
-import javax.xml.xpath.XPathExpression;
 import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IWorkspace;
@@ -23,8 +20,6 @@ import org.eclipse.core.runtime.jobs.ISchedulingRule;
 import org.eclipse.emf.codegen.ecore.genmodel.GenModel;
 import org.eclipse.emf.codegen.ecore.genmodel.GenPackage;
 import org.eclipse.emf.common.util.URI;
-import org.eclipse.emf.ecore.resource.Resource;
-import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.gervarro.eclipse.workspace.util.WorkspaceTask;
 import org.moflon.core.utilities.MoflonConventions;
 import org.moflon.core.utilities.WorkspaceHelper;
@@ -53,11 +48,11 @@ public class PluginXmlUpdater extends WorkspaceTask {
 	}
 
 	private static class GeneratedPackageEntry {
-		private String uri;
+		private final String uri;
 
-		private String className;
+		private final String className;
 
-		private String genmodelFile;
+		private final String genmodelFile;
 
 		public GeneratedPackageEntry(final String uri, final String className, final String genmodelFile) {
 			this.uri = uri;
@@ -80,14 +75,14 @@ public class PluginXmlUpdater extends WorkspaceTask {
 	 */
 	public static final void updatePluginXml(final IProject currentProject, final IProgressMonitor monitor)
 			throws CoreException {
-		final SubMonitor subMon = SubMonitor.convert(monitor, "Create/update plugin.xml", 1);
+		final var subMon = SubMonitor.convert(monitor, "Create/update plugin.xml", 1);
 
 		updatePluginXml(currentProject, extractGenModelFromProject(currentProject), subMon.split(1));
 	}
 
 	public static final void updatePluginXml(final IProject currentProject, final GenModel genModel,
 			final IProgressMonitor monitor) throws CoreException {
-		final PluginXmlUpdater pluginXmlUpdater = new PluginXmlUpdater(currentProject, genModel);
+		final var pluginXmlUpdater = new PluginXmlUpdater(currentProject, genModel);
 		WorkspaceTask.executeInCurrentThread(pluginXmlUpdater, IWorkspace.AVOID_UPDATE, monitor);
 	}
 
@@ -98,26 +93,26 @@ public class PluginXmlUpdater extends WorkspaceTask {
 	@Override
 	public void run(final IProgressMonitor monitor) throws CoreException {
 		try {
-			final SubMonitor subMon = SubMonitor.convert(monitor, "Updating plugin.xml from Genmodel", 3);
-			final String content = readOrGetDefaultPluginXmlContent(project);
-			final Document doc = XMLUtils.parseXmlDocument(content);
+			final var subMon = SubMonitor.convert(monitor, "Updating plugin.xml from Genmodel", 3);
+			final var content = readOrGetDefaultPluginXmlContent(this.project);
+			final var doc = XMLUtils.parseXmlDocument(content);
 			subMon.worked(1);
 
 			removeExtensionPointsForGeneratedPackages(doc);
 
-			final List<Element> extensionElements = createListOfGeneratedPackageExtensions(doc, project, genModel);
-			final Node pluginRootElement = getRootNode(doc);
+			final var extensionElements = createListOfGeneratedPackageExtensions(doc, this.project, this.genModel);
+			final var pluginRootElement = getRootNode(doc);
 			extensionElements.forEach(element -> pluginRootElement.appendChild(element));
 
-			String output = XMLUtils.formatXmlString(doc, subMon.split(1));
+			final var output = XMLUtils.formatXmlString(doc, subMon.split(1));
 
 			if (!output.equals(content)) {
-				WorkspaceHelper.addFile(project, "plugin.xml", output, subMon.split(1));
+				WorkspaceHelper.addFile(this.project, "plugin.xml", output, subMon.split(1));
 			}
 
 		} catch (IOException | XPathExpressionException e) {
 			throw new CoreException(new Status(IStatus.ERROR, WorkspaceHelper.getPluginId(getClass()),
-					"Error reading/writing plugin.xml for project " + project.getName() + ": " + e.getMessage(), e));
+					"Error reading/writing plugin.xml for project " + this.project.getName() + ": " + e.getMessage(), e));
 		}
 	}
 
@@ -132,21 +127,21 @@ public class PluginXmlUpdater extends WorkspaceTask {
 
 	@Override
 	public ISchedulingRule getRule() {
-		return project;
+		return this.project;
 	}
 
 	private static void removeExtensionPointsForGeneratedPackages(final Document doc) throws XPathExpressionException {
-		NodeList extensionPoints = PluginXmlUpdater.getGeneratedPackageExtensionPoints(doc);
-		for (int n = 0; n < extensionPoints.getLength(); ++n) {
+		final var extensionPoints = PluginXmlUpdater.getGeneratedPackageExtensionPoints(doc);
+		for (var n = 0; n < extensionPoints.getLength(); ++n) {
 			extensionPoints.item(n).getParentNode().removeChild(extensionPoints.item(n));
 		}
 	}
 
 	private static String readOrGetDefaultPluginXmlContent(final IProject project) throws IOException, CoreException {
-		IFile pluginXmlFile = getPluginXml(project);
-		String content = "";
+		final var pluginXmlFile = getPluginXml(project);
+		var content = "";
 		if (pluginXmlFile.exists()) {
-			content = IOUtils.toString(pluginXmlFile.getContents());
+			content = new String(pluginXmlFile.getContents().readAllBytes());
 		} else {
 			content = DEFAULT_PLUGIN_XML_CONTENT;
 		}
@@ -155,13 +150,13 @@ public class PluginXmlUpdater extends WorkspaceTask {
 
 	private static List<Element> createListOfGeneratedPackageExtensions(final Document doc, final IProject project,
 			final GenModel genmodel) {
-		final List<GeneratedPackageEntry> entries = extractGeneratedPackageEntries(project, genmodel);
+		final var entries = extractGeneratedPackageEntries(project, genmodel);
 		final List<Element> extensionElements = new ArrayList<>();
 
 		entries.forEach(entry -> {
-			Element extensionElement = doc.createElement("extension");
+			final var extensionElement = doc.createElement("extension");
 			extensionElement.setAttribute("point", "org.eclipse.emf.ecore.generated_package");
-			Element packageElement = doc.createElement("package");
+			final var packageElement = doc.createElement("package");
 			packageElement.setAttribute("uri", entry.uri);
 			packageElement.setAttribute("class", entry.className);
 			packageElement.setAttribute("genModel", entry.genmodelFile);
@@ -173,11 +168,11 @@ public class PluginXmlUpdater extends WorkspaceTask {
 
 	private static List<GeneratedPackageEntry> extractGeneratedPackageEntries(final IProject project,
 			final GenModel genmodel) {
-		String genmodelFile = MoflonConventions.getDefaultPathToGenModelInProject(project.getName());
+		final var genmodelFile = MoflonConventions.getDefaultPathToGenModelInProject(project.getName());
 		final List<GeneratedPackageEntry> entries = new ArrayList<>();
-		final List<GenPackage> ePackages = genmodel.getAllGenPackagesWithClassifiers();
+		final var ePackages = genmodel.getAllGenPackagesWithClassifiers();
 		for (final GenPackage genPackage : ePackages) {
-			final String fullyQualifiedPackageClassName = genPackage.getInterfacePackageName() + "."
+			final var fullyQualifiedPackageClassName = genPackage.getInterfacePackageName() + "."
 					+ genPackage.getPackageInterfaceName();
 
 			entries.add(new GeneratedPackageEntry(genPackage.getNSURI(), fullyQualifiedPackageClassName, genmodelFile));
@@ -190,10 +185,10 @@ public class PluginXmlUpdater extends WorkspaceTask {
 	}
 
 	private static NodeList getGeneratedPackageExtensionPoints(final Document doc) throws XPathExpressionException {
-		XPathFactory xPathfactory = XPathFactory.newInstance();
-		XPath xpath = xPathfactory.newXPath();
-		XPathExpression expr = xpath.compile("/plugin/extension[@point='org.eclipse.emf.ecore.generated_package']");
-		NodeList extensionPoints = (NodeList) expr.evaluate(doc, XPathConstants.NODESET);
+		final var xPathfactory = XPathFactory.newInstance();
+		final var xpath = xPathfactory.newXPath();
+		final var expr = xpath.compile("/plugin/extension[@point='org.eclipse.emf.ecore.generated_package']");
+		final var extensionPoints = (NodeList) expr.evaluate(doc, XPathConstants.NODESET);
 		return extensionPoints;
 	}
 
@@ -205,12 +200,12 @@ public class PluginXmlUpdater extends WorkspaceTask {
 	 * @return the genmodel (if exists)
 	 */
 	private static GenModel extractGenModelFromProject(final IProject currentProject) {
-		final String pathInsideProject = MoflonConventions.getDefaultPathToGenModelInProject(currentProject.getName());
-		final IFile projectGenModelFile = currentProject.getFile(pathInsideProject);
-		final String pathToGenmodel = projectGenModelFile.getRawLocation().toOSString();
-		final ResourceSet set = eMoflonEMFUtil.createDefaultResourceSet();
-		final Resource genModelResource = set.getResource(URI.createFileURI(pathToGenmodel), true);
-		final GenModel genmodel = (GenModel) genModelResource.getContents().get(0);
+		final var pathInsideProject = MoflonConventions.getDefaultPathToGenModelInProject(currentProject.getName());
+		final var projectGenModelFile = currentProject.getFile(pathInsideProject);
+		final var pathToGenmodel = projectGenModelFile.getRawLocation().toOSString();
+		final var set = eMoflonEMFUtil.createDefaultResourceSet();
+		final var genModelResource = set.getResource(URI.createFileURI(pathToGenmodel), true);
+		final var genmodel = (GenModel) genModelResource.getContents().get(0);
 		return genmodel;
 	}
 }
